# CADExchange

./: .gitignore  CMakeLists.txt  CODE_IMPROVEMENT_PLAN.md  README.md  RecommendedApproach_Output.xml  code_structure.md  compile_commands.json
builders/: EndConditionBuilder.h  ExtrudeBuilder.h  FeatureBuilderBase.h  ReferenceBuilder.h  ReferenceFactory.cpp  ReferenceFactory.h  RevolveBuilder.h  SketchBuilder.h  StringHelper.h
core/: TypeAdapters.h  UnifiedFeatures.h  UnifiedModel.h  UnifiedTypes.h  UnitConverter.cpp
core/bridge/: BridgeCommon.h
doc/: SW与Creo倒圆角字段映射整理_20260518.md  SW与Creo筋特征字段映射整理_20260529.md  datum_plane_cross_system_mapping_20260318.md  feature_builder_accessor_examples_20260318.md  三系统倒圆角跨系统参数调研_20260506.md  三系统倒角跨系统参数调研_20260504.md  三系统拔模跨系统参数调研_20260508.md  三系统特征历史态几何与持久引用能力调研_20260524.md  三系统特征生成与统一模型映射_20260430.md  三系统草图约束能力调研_20260503.md  倒圆角统一结构优化方案与SwCreo映射.md  倒圆角统一结构优化方案与SwCreo映射_20260522.md  倒圆角统一结构设计_SW与Creo_20260518.md  倒角特征统一结构与SwCreo转换过程_20260511.md  半边结构冗余边过滤与几何对比规范化记录_20260525.md  壳特征实现文档_20260604.md  壳特征跨系统参数调研_20260603.md  工程类特征统一结构设计与SwCreo映射总览_20260615.md  扫掠特征跨系统参数调研_20260410.md  拔模特征统一结构设计与SwCreo映射_20260605.md  旋转特征统一结构设计_20260329.md  旋转特征跨系统参数调研_20260329.md  旋转轴正方向统一语义_20260407.md  筋特征绝对方向映射方案总览_20260615.md  筋特征统一结构设计与SwCreo映射.md  薄壁统一映射调整记录_20260402.md  薄壁跨系统原始语义与公共语义映射_20260406.md  跨系统草图圆弧与约束在任意坐标系下的三维投影重建与手性校正方案_20260611.md  阵列特征跨系统参数调研_20260710.md  阵列特征跨系统参数调研与详细映射设计_20260710.md
examples/: MigrationRegressionTest.cpp  PartReconstructionDemo.cpp  PythonBindingSmokeTest.cpp  RecommendedApproach.cpp  test_geom.cpp
include/: CADSerializer.h  ExtrudeBuilder.h  FeatureBuilderBase.h  FeatureBuilders.h  FeatureFormatter.h  RevolveBuilder.h  SketchBuilder.h  StringHelper.h  TinyXMLSerializer.h  TypeAdapters.h  UnifiedFeatures.h  UnifiedModel.h  UnifiedSerialization.h
serialization/: CADSerializer.h  FeatureFormatter.h  SerializationRegistry.cpp  TinyXMLSerializer.cpp  TinyXMLSerializer.h  UnifiedSerialization.h
service/accessors/: AccessorMacros.h  ChamferAccessor.h  DatumPlaneAccessor.h  DraftAccessor.h  ExtrudeAccessor.h  FeatureAccessorBase.h  FeatureAccessors.h  FilletAccessor.h  ModelAccessor.h  PatternAccessor.h  ReferenceAccessor.h  RevolveAccessor.h  RibAccessor.h  ShellAccessor.h  SketchAccessor.h  SweepAccessor.h  todo.md
service/api/py/: module.cpp  python_api.h
service/builders/: BuilderMacros.h  ChamferBuilder.h  DatumPlaneBuilder.h  DraftBuilder.h  EndConditionBuilder.h  ExtrudeBuilder.h  FeatureBuilderBase.h  FeatureBuilders.h  FilletBuilder.h  PatternBuilder.h  ReferenceBuilder.h  ReferenceFactory.h  RevolveBuilder.h  RibBuilder.h  ShellBuilder.h  SketchBuilder.h  StringHelper.h  SweepBuilder.h
service/geometry/: GeometryCollectorBase.h  GeometryCompareHelpers.cpp  GeometryCompareHelpers.h  GeometryTypes.h
service/serialization/: CADSerializer.h  FeatureFormatter.h  SerializationRegistry.cpp  TinyXMLSerializer.cpp  TinyXMLSerializer.h  UnifiedSerialization.h
service/validation/: ModelValidator.cpp  ModelValidator.h
src/: SerializationRegistry.cpp  TinyXMLSerializer.cpp
test/: UsageExampleTest.cpp
test/SolidWorks/: ReadPartTest.cpp  WritePartTest.cpp
